<resources>
    <string name="app_name">Free Unit Converter</string>
    <string name="title">Free Unit Converter</string>
    <string name="select_a_unit">select a unit</string>
    <string name="enter_a_value">enter a value</string>
    <string name="category">Category:</string>
    <string name="precision">Precision:</string>
    <string name="current_precision">Current Precision:</string>
    <string name="default_precision">5</string>
    <string name="swap_arrow">Swap Arrow</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
</resources>
